Fixes footer logo position on smaller screens.

--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -13,6 +13,7 @@ body {
 		}
 		ul.links {
 			float: left;
+			margin-right: 10px;
 			li {
 				&:nth-child(3) { // Contact
 					display: none;
@@ -31,13 +32,16 @@ body {
 					color: $athens-gray;
 				}
 			}
+			@include break-sm {
+				clear: both;
+			}
 		}
 		.copyright {
 			float: left;
-			margin-left: 10px;
 			color: $white;
 			@include break-sm {
 				margin-left: 0;
+				clear: both;
 			}
 		}
 		.by-ionisx {
@@ -50,6 +54,7 @@ body {
 				right: 5px;
 				position: relative;
 				float: left;
+				clear: both;
 				top: 10px;
 				right: 0;
 				margin-bottom: 30px;
